# MouseTrailV2-GL

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.rc  config.json
.github/workflows/: build.yml
src/: config.cpp  config.hpp  main.cpp  platform_win.cpp  platform_win.hpp  resource.h  trail.cpp  trail.hpp  tray_ui.cpp  tray_ui.hpp
